# openvino_contrib

./: .gitignore  .gitmodules  .licenserc.yaml  .readthedocs.yaml  CODEOWNERS  CONTRIBUTING.md  Jenkinsfile  README.md  requirements.lock.txt  requirements.txt  third-party-programs.txt
modules/arm_plugin/: .gitmodules  CMakeLists.txt  Dockerfile.RPi32  Dockerfile.RPi32_buster  Dockerfile.RPi32_stretch  Dockerfile.RPi64  Dockerfile.RPi64_bionic  Dockerfile.RPi64_focal  README.md  armplg_build.sh  requirements_apple_m1.txt  third-party-programs.txt
modules/arm_plugin/cmake/: features.cmake
modules/arm_plugin/dockerfiles/: Dockerfile.RPi32_buster  Dockerfile.RPi32_stretch  Dockerfile.RPi64_bionic  Dockerfile.RPi64_focal
modules/arm_plugin/docs/: arm_opset.md
modules/arm_plugin/scripts/: arm_cpu_plugin_build.sh  install_android_dependencies.sh  install_build_dependencies.sh
modules/arm_plugin/src/: CMakeLists.txt  arm_async_infer_request.cpp  arm_async_infer_request.hpp  arm_config.cpp  arm_config.hpp  arm_executable_network.cpp  arm_executable_network.hpp  arm_ie_scheduler.cpp  arm_ie_scheduler.hpp  arm_infer_request.cpp  arm_infer_request.hpp  arm_itt.hpp  arm_plugin.cpp  arm_plugin.hpp
modules/cuda_plugin/: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  docker.sh
modules/cuda_plugin/docs/: cuda_opset.md
modules/cuda_plugin/src/: CMakeLists.txt  cancellation_token.hpp  cuda_async_infer_request.cpp  cuda_async_infer_request.hpp  cuda_config.cpp  cuda_config.hpp  cuda_create_plugin.cpp  cuda_creation_context.hpp  cuda_executable_network.cpp  cuda_executable_network.hpp  cuda_function_transformation.cpp  cuda_graph.cpp  cuda_graph.hpp  cuda_graph_transformer.cpp  cuda_infer_request.cpp  cuda_infer_request.hpp  cuda_inference_request_context.hpp  cuda_itt.hpp  cuda_jthread.hpp  cuda_latch.hpp  cuda_memory_model.cpp  cuda_memory_model.hpp  cuda_memory_model_composer.cpp  cuda_memory_model_composer.hpp  cuda_op_buffers_extractor.cpp  cuda_op_buffers_extractor.hpp  cuda_operation_base.cpp  cuda_operation_base.hpp  cuda_operation_registry.cpp  cuda_operation_registry.hpp  cuda_pattern_transformation.cpp  cuda_plugin.cpp  cuda_plugin.hpp  cuda_plugin_host.cpp  cuda_profiler.cpp  cuda_profiler.hpp  cuda_tensor_collector.cpp  cuda_tensor_collector.hpp  cuda_thread_context.hpp  cuda_thread_pool.cpp  (+5 more)
modules/cuda_plugin/utils/: check.sh  cuda-sanitizer.sh  format.sh  install-pre-push.sh  lsan-suppressions.txt  pre-push  pre-push-impl.sh  uninstall-pre-push.sh
modules/cuda_plugin/wheel/: requirements.txt  setup.py
modules/custom_layers/user_ie_extensions/: CMakeLists.txt  cpu_kernel.hpp  extension.cpp  op.hpp  unpool_impl.cpp  unpool_op.cpp
modules/custom_operations/: CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  readme.txt  requirements-dev.txt  setup.py
modules/custom_operations/cmake/: platforms.cmake
modules/custom_operations/tests/: requirements.txt  run_tests.py  tokenizers_test.py
modules/custom_operations/user_ie_extensions/: CMakeLists.txt  calculate_grid.cpp  calculate_grid.hpp  complex_mul.cpp  complex_mul.hpp  fft.cpp  fft.hpp  grid_sample.cpp  grid_sample.hpp  ov_extension.cpp  sparse_conv.cpp  sparse_conv.hpp  sparse_conv_transpose.cpp  sparse_conv_transpose.hpp
modules/gfx_plugin/: .gitignore  CMakeLists.txt  README.md
modules/gfx_plugin/bench/: compare_cpu_metal.cpp  gfx_eval.py  yolo12_benchmark.sh  yolo12_export.py
modules/gfx_plugin/cmake/: GfxAndroidRuntimeBundle.cmake.in  GfxBackendConfig.cmake  GfxRaspberryOpenCLToolchain.cmake  GfxSources.cmake  InstallRaspberryOpenCLBundle.cmake  KernelSource.hpp.in  WriteGfxTestPluginsXml.cmake  gfx_dummy_fuzzing_engine.c  write_gfx_test_plugins_xml.cmake
modules/gfx_plugin/docs/: ARCHITECTURE.md  DEVELOPMENT.md  MICROBENCH_SCHEMA.md  PROFILING_RUNBOOK.md  TESTING.md  USAGE.md
modules/gfx_plugin/src/: CMakeLists.txt
modules/gfx_plugin/tests/: CMakeLists.txt  gfx_accuracy_tolerance.hpp  gfx_plugin_runtime_path.hpp  gfx_shared_gtest_allow.cpp  gfx_test_utils.hpp  metal_basic_ops_test.cpp  metal_precision_study_test.cpp  metal_set_device_name.cpp  metal_test_constants.cpp
modules/gfx_plugin/tools/: gfx_calibration_diff.py  gfx_external_trace_summary.py  gfx_microbench_smoke.py  gfx_profile_runbook.py  gfx_rpi_vulkan_toolchain_builder.py
modules/java_api/: .gitignore  CMakeLists.txt  README.md  build.gradle  gradle.properties  settings.gradle
modules/java_api/cmake/: CMakeFindJavaCommon.cmake  FindJNI.cmake  FindPackageHandleStandardArgs.cmake  FindPackageMessage.cmake
modules/java_api/cpp/: any.cpp  blob.cpp  cnn_network.cpp  compiled_model.cpp  core.cpp  data.cpp  dimension.cpp  ie_core.cpp  infer_request.cpp  input_info.cpp  input_model_info.cpp  input_tensor_info.cpp  jni_common.hpp  layout.cpp  locked_memory.cpp  model.cpp  openvino_java.hpp  output.cpp  output_info.cpp  pre_post_processor.cpp  pre_process_info.cpp  pre_process_steps.cpp  tensor.cpp  tensor_desc.cpp
modules/java_api/docs/: Makefile  conf.py  index.rst  make.bat
modules/java_api/samples/: CMakeLists.txt  README.md
modules/java_api/tests/: BlobTests.java  CMakeLists.txt  CoreTests.java  DataTests.java  IECoreTests.java  IETest.java  InferRequestTests.java  ModelTests.java  OVTest.java  OpenVinoTestRunner.java  PrePostProcessorTests.java  README.md  TensorTests.java  TestsSuite.java
modules/llama_cpp_plugin/: .clang-format  CMakeLists.txt  README.md  build.sh
modules/llama_cpp_plugin/include/: compiled_model.hpp  infer_request.hpp  plugin.hpp  state.hpp
modules/llama_cpp_plugin/notebooks/: llama_cpp_plugin_with_qwen.ipynb  qwen.ipynb
modules/llama_cpp_plugin/src/: CMakeLists.txt  compiled_model.cpp  infer_request.cpp  plugin.cpp
modules/llama_cpp_plugin/tests/: CMakeLists.txt
modules/llama_cpp_plugin/tools/: CMakeLists.txt  cache_embedder.cpp  runner.cpp  tensor_comparator.cpp
modules/metal_plugin/: CMakeLists.txt  README.md
modules/metal_plugin/src/: plugin.cpp  (+8 more)
modules/nvidia_plugin/: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  SECURITY.md  build.sh  docker.sh
(+5100 files in other folders)
